src/App.css
.App {
	text-align: center;
	max-height: 20vh;
	background-color: #efb54a;
	font-family: 'Yanone Kaffeesatz', sans-serif;
}
.instructions {
	position: absolute;
	top: 60%;
	left: 0;
	right: 0;
	margin: auto;
}

.element {
	width: 40%;
	margin: auto;
}

.controls {
	display: flex;
	justify-content: center;
	margin-top: 25vh;
	align-items: center;
}

.checkbox {
	padding-left: 2vh;
}

.form {
	display: flex;
	flex-direction: row;
	justify-content: center;
	padding-top: 0vh;
	padding-bottom: 3vh;
}

h3 {
	padding-right: 10px;
	padding-left: 10px;
}

h1 {
	margin-top: 0;
	background-color: white;
}


.tongue-chart {
	max-width: 40%;
	position: fixed;
	left: 30%;
	z-index: 999;
	display: flex;
	flex-direction: column;

	background-color: white;
	border: 2px solid black;
	border-radius: 5px;
}
.tongue-img {
	max-width: 40%;
	align-self: center;
}

.tongue-btn {
	align-self: flex-end;
	font-size: 1.5rem;
}

.hidden {
	display: none;
}

@media only screen and (max-width: 600px) {
	.App {
		/* background-size: 250% 100%; */
	}
	.main {
		flex-direction: column;
		align-items: center;
		padding-top: 20vh;
		width: 100%;
		text-shadow: 2px 2px white;
	}
	.solution {
		border-radius: 5px;
		background-color: white;
		opacity: 0.7;
	}

	.instructions {
		top: 75%;
	}
} 

